# state-machine-c

./: .gitignore  README.md
example/: CMakeLists.txt
example/src/: main.c
examples/light/: CMakeLists.txt  light-schematic.drawio  main.c
examples/light-advanced/: CMakeLists.txt
examples/light-advanced/inc/: data.h  events.h  non_block.h  states.h
examples/light-advanced/src/: events.c  main.c  non_block.c  states.c
examples/light/src/: main.c
examples/rc5-decoder/RC-5_transmitter/: RC-5_transmitter.ino  rc5_transmitter.cpp  rc5_transmitter.h
examples/rc5-decoder/RC_5_transmitter/: RC_5_transmitter.ino  rc5_transmitter.cpp  rc5_transmitter.h
examples/rc5-decoder/atmega328p-rc5-decoder/: atmega328p-rc5-decoder.atsln
examples/rc5-decoder/atmega328p-rc5-decoder/atmega328p-rc5-decoder/: atmega328p-rc5-decoder.componentinfo.xml  atmega328p-rc5-decoder.cproj  main.c
examples/rc5-decoder/stm32f4-rc5-decoder/: .cproject  .mxproject  .project  stm32f4-rc5-decoder Debug.launch  stm32f4-rc5-decoder.ioc
examples/rc5-decoder/stm32f4-rc5-decoder/Core/Inc/: main.h  rc5_decoder.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
examples/rc5-decoder/stm32f4-rc5-decoder/Core/Src/: com.c  gpio.c  main.c  rc5_decoder.c  rc5_decoder_utilities.c  stm32f4xx_it.c  tim.c
include/fsm/: config.h  fsm.h
lib/inc/: finite_state_machine.h  fsm_event.h  fsm_state.h  state_machine.h
lib/src/: finite_state_machine.c  state_machine.c
src/: fsm.c
